<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:background="#3c3f41"
    tools:context="com.iox_prime.neomemo.SplashActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/trade_mark"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/trademark"
            android:contentDescription="@string/trade_mark"
            />
        <TextView
            android:id="@+id/view"
            android:layout_toEndOf="@id/trade_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/iox_prime_presents"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/bright_green" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/splash"
        android:contentDescription="TODO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/bright_green"
        android:textStyle="bold" />
</RelativeLayout>
