<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.iox_prime.neomemo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/bright_green"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp">

        <ImageButton
            android:id="@+id/speak_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/image_button"
            android:src="@drawable/mic" />

        <ImageButton
            android:id="@+id/list_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@id/speak_button"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/image_button"
            android:src="@drawable/list" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@id/list_button"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/image_button"
            android:src="@drawable/save_icon" />

        <ImageButton
            android:id="@+id/clipboard_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/save_button"
            android:contentDescription="@string/image_button"
            android:src="@drawable/copy_clipboard" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@id/clipboard_button"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/image_button"
            android:src="@drawable/ic_clear_text" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#81a581" />

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:hint="@string/enter_title"
        android:inputType="textCapSentences"
        android:maxLength="32"
        android:textColor="@color/bright_green"
        android:textColorHint="#999"
        android:textCursorDrawable="@color/bright_green"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#81a581" />

    <EditText
        android:id="@+id/edit_text_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:hint="@string/add_memo"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:lines="10"
        android:maxLines="12"
        android:minLines="8"
        android:scrollbars="vertical"
        android:textColor="@color/bright_green"
        android:textColorHint="#999"
        android:textCursorDrawable="@color/bright_green" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#81a581" />

</LinearLayout>
